external-crates/move/crates/move-compiler/tests/move_check/typing/continue_outside_loop.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04014]: invalid loop control
  ┌─ tests/move_check/typing/continue_outside_loop.move:6:9
  │
6 │         continue
  │         ^^^^^^^^ Invalid usage of 'continue'. 'continue' can only be used inside a loop body or lambda
